Fix hex spacing on mobile

--- a/contact/css/contact.css
+++ b/contact/css/contact.css
@@ -38,6 +38,10 @@
   padding: 0;
 }
 
+#hide {
+  display: inline;
+}
+
 .hex {
   float: left;
   margin-right: -65px;
